fixed bug with animated background not covering page and/or breaking sticky navbar

--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -47,12 +47,23 @@ html {
   overflow-x: hidden;
 }
 
+.bg-animated {
+  pointer-events: none;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 /**
 * The following pseudo-elements are used to create slated elements
 * that move from right to left indefinitely to create a background effect
 */
-html::before,
-html::after {
+.bg-animated::before,
+.bg-animated::after {
   pointer-events: none;
   position: absolute;
   content: "";
@@ -63,13 +74,13 @@ html::after {
   z-index: -1;
 }
 
-html::before {
+.bg-animated::before {
   width: 35%;
   animation: leftward 40s linear infinite;
   clip-path: polygon(60% 0%, 100% 0%, 40% 100%, 0% 100%);
 }
 
-html::after {
+.bg-animated::after {
   animation: leftward 160s linear infinite;
   clip-path: polygon(75% 0%, 100% 0%, 25% 100%, 0% 100%);
 }
